--- a/public/index.html
+++ b/public/index.html
@@ -237,7 +237,7 @@
 
 
         <!--  start numbers  -->
-        <section class="tc-numbers-style3 px-lg-5">
+        <!-- <section class="tc-numbers-style3 px-lg-5">
             <div class="content wow fadeInUp slow">
                 <div class="container">
                     <div class="row align-items-center">
@@ -264,7 +264,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!--  end numbers  -->
 
 
