--- a/public/job_history_of_us_workers.html
+++ b/public/job_history_of_us_workers.html
@@ -592,11 +592,11 @@
                                 </div> -->
                                 <p class="fw-bold text-uppercase fsz-16 mb-30"> our social </p>
                                 <div class="social-icons mb-60">
-                                    <a href="#"> <i class="lab la-twitter"></i> </a>
+                                    <a href="https://twitter.com/metanoiahr"> <i class="lab la-twitter"></i> </a>
                                     <!-- <a href="#"> <i class="lab la-facebook-f"></i> </a> -->
                                     <!-- <a href="#"> <i class="lab la-pinterest"></i> </a> -->
                                     <!-- <a href="#"> <i class="lab la-google"></i> </a> -->
-                                    <a href="#"> <i class="lab la-linkedin-in"></i> </a>
+                                    <a href="https://www.linkedin.com/in/abdullahhashemi/"> <i class="lab la-linkedin-in"></i> </a>
                                 </div>
 
                                 <p class="fw-bold text-uppercase fsz-16 mb-30"> popular posts </p>
@@ -697,15 +697,12 @@
 
                                 <p class="fw-bold text-uppercase fsz-16 mb-30"> popular tags </p>
                                 <div class="tags">
-                                    <a href="#"> WordPress </a>
-                                    <a href="#"> Consultation </a>
-                                    <a href="#"> Figma </a>
-                                    <a href="#"> Business </a>
-                                    <a href="#"> Market </a>
-                                    <a href="#"> Strategy </a>
-                                    <a href="#"> HTML </a>
-                                    <a href="#"> PSD </a>
-                                    <a href="#"> Experience </a>
+                                    <a href="#"> EmployeeTurnover </a>
+                                    <a href="#"> CareerAdvancement </a>
+                                    <a href="#"> JobPromotions </a>
+                                    <a href="#"> HRStrategies </a>
+                                    <a href="#"> WorkforceManagement </a>
+                                    <a href="#"> LeadershipDevelopment </a>
                                 </div>
                             </div>
                         </div>
