--- a/public/mental_toughness_leadership.html
+++ b/public/mental_toughness_leadership.html
@@ -264,7 +264,7 @@
                                     <div class="row">
                                         <div class="col-lg-7">
                                             <p class="info-text">
-                                                Story time: Back in March 2020 (was at <u><a href="https://www.linkedin.com/company/yoppworks/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_recent_activity_content_view%3BPVjgbOpESlSGMAEj5OzZvQ%3D%3D">YoppWorks</a></u>), we lost almost 90% of our revenue given our clients were mostly in the hospitality industry :/. There was a few of us at the office and our CEO said let's all go for a walk! As we walked, I noticed he paced quickly ahead whilst on calls. I couldn't imagine what was going on in his head, but I could tell he was about to make one of his toughest decisions. From an HR & finance perspective, it was clear that layoffs was on the table and I figured my fate had been decided. However, instead of doing layoffs, our CEO decided to incur losses and focus all the efforts on business development and surely enough, we landed a large Canadian enterprise that saved us (and we kept growing that year and needed to hire). Looking back, this decision required strong mental toughness and leadership (thanks for all that you did Jack Gulas)!
+                                                Story time: Back in March 2020 (was at <a href="https://www.linkedin.com/company/yoppworks/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_recent_activity_content_view%3BPVjgbOpESlSGMAEj5OzZvQ%3D%3D"><u>YoppWorks</u></a>), we lost almost 90% of our revenue given our clients were mostly in the hospitality industry . There was a few of us at the office and our CEO said let's all go for a walk! As we walked, I noticed he paced quickly ahead whilst on calls. I couldn't imagine what was going on in his head, but I could tell he was about to make one of his toughest decisions. From an HR & finance perspective, it was clear that layoffs was on the table and I figured my fate had been decided. However, instead of doing layoffs, our CEO decided to incur losses and focus all the efforts on business development and surely enough, we landed a large Canadian enterprise that saved us (and we kept growing that year and needed to hire). Looking back, this decision required strong mental toughness and leadership (thanks for all that you did Jack Gulas)!
                                             </p>
                                         </div>
                                         <div class="col-lg-5">
@@ -595,11 +595,11 @@
                                 </div> -->
                                 <p class="fw-bold text-uppercase fsz-16 mb-30"> our social </p>
                                 <div class="social-icons mb-60">
-                                    <a href="#"> <i class="lab la-twitter"></i> </a>
+                                    <a href="https://twitter.com/metanoiahr"> <i class="lab la-twitter"></i> </a>
                                     <!-- <a href="#"> <i class="lab la-facebook-f"></i> </a> -->
                                     <!-- <a href="#"> <i class="lab la-pinterest"></i> </a> -->
                                     <!-- <a href="#"> <i class="lab la-google"></i> </a> -->
-                                    <a href="#"> <i class="lab la-linkedin-in"></i> </a>
+                                    <a href="https://www.linkedin.com/in/abdullahhashemi/"> <i class="lab la-linkedin-in"></i> </a>
                                 </div>
 
                                 <p class="fw-bold text-uppercase fsz-16 mb-30"> popular posts </p>
@@ -700,15 +700,12 @@
 
                                 <p class="fw-bold text-uppercase fsz-16 mb-30"> popular tags </p>
                                 <div class="tags">
-                                    <a href="#"> WordPress </a>
-                                    <a href="#"> Consultation </a>
-                                    <a href="#"> Figma </a>
-                                    <a href="#"> Business </a>
-                                    <a href="#"> Market </a>
-                                    <a href="#"> Strategy </a>
-                                    <a href="#"> HTML </a>
-                                    <a href="#"> PSD </a>
-                                    <a href="#"> Experience </a>
+                                    <a href="#"> MentalToughness </a>
+                                    <a href="#"> LeadershipChallenges </a>
+                                    <a href="#"> Decision-Making </a>
+                                    <a href="#"> Resilience </a>
+                                    <a href="#"> Long-TermBusinessStrategy </a>
+                                   
                                 </div>
                             </div>
                         </div>
