--- a/public/page-contact-3.html
+++ b/public/page-contact-3.html
@@ -206,8 +206,8 @@
                                             I want to receive news and updates once in a while
                                         </label>
                                     </div>
-                                    <p class="fsz-13 color-999 mt-10"> By submitting, I’m agreed to the <a href="#"
-                                            class="color-fff text-decoration-underline"> Terms & Conditons </a> </p>
+                                    <!-- <p class="fsz-13 color-999 mt-10"> By submitting, I’m agreed to the <a href="#"
+                                            class="color-fff text-decoration-underline"> Terms & Conditons </a> </p> -->
                                     <div class="button_su mt-90">
                                         <span class="su_button_circle bg-000 desplode-circle"></span>
                                         <a href="mailto:abdullah@metanoiahr.com"
