--- a/public/services.html
+++ b/public/services.html
@@ -256,8 +256,8 @@
                                     your operational efficiency and boosting your bottom line.
                                 </p>
                             </div>
-                            <a href="./inner_pages/page-services.html" class="fsz-14 text-uppercase hover-cyan1">see all
-                                services <i class="ti-arrow-top-right"></i> </a>
+                            <!-- <a href="./inner_pages/page-services.html" class="fsz-14 text-uppercase hover-cyan1">see all
+                                services <i class="ti-arrow-top-right"></i> </a> -->
                         </div>
                     </div>
                 </div>
@@ -558,8 +558,8 @@
                                             I want to receive news and updates once in a while
                                         </label>
                                     </div>
-                                    <p class="fsz-13 color-999 mt-10"> By submitting, I’m agreed to the <a href="#"
-                                            class="color-fff text-decoration-underline"> Terms & Conditons </a> </p>
+                                    <!-- <p class="fsz-13 color-999 mt-10"> By submitting, I’m agreed to the <a href="#"
+                                            class="color-fff text-decoration-underline"> Terms & Conditons </a> </p> -->
                                     <div class="button_su mt-90">
                                         <span class="su_button_circle bg-cyan1 desplode-circle"></span>
                                         <a href="mailto:abdullah@metanoiahr.com"
@@ -582,16 +582,14 @@
                                             <button class="accordion-button collapsed" type="button"
                                                 data-bs-toggle="collapse" data-bs-target="#collapse100"
                                                 aria-expanded="true" aria-controls="collapse100">
-                                                How benefit that We got when choose Basic plan?
+                                                What is strategic recruiting, and how can it benefit my company?
                                             </button>
                                         </h2>
                                         <div id="collapse100" class="accordion-collapse collapse"
                                             aria-labelledby="heading100" data-bs-parent="#accordionExample100">
                                             <div class="accordion-body">
                                                 <div class="text color-999">
-                                                    Through the collaboration with customers in discussing needs and
-                                                    demand, we're able to attain mutual understand again customer trust
-                                                    to offer appropriate advice
+                                                    Strategic recruiting involves a tailored approach to finding and hiring the right talent for your organization. It ensures that you not only fill vacant positions but also align your workforce with your long-term business goals, increasing productivity and reducing turnover.
                                                 </div>
                                             </div>
                                         </div>
@@ -601,16 +599,14 @@
                                             <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                                 data-bs-target="#collapse101" aria-expanded="true"
                                                 aria-controls="collapse101">
-                                                Our project will 100% Secure?
+                                                How can empowerment coaching help my employees and organization?
                                             </button>
                                         </h2>
                                         <div id="collapse101" class="accordion-collapse collapse show"
                                             aria-labelledby="heading101" data-bs-parent="#accordionExample100">
                                             <div class="accordion-body">
                                                 <div class="text color-999">
-                                                    Through the collaboration with customers in discussing needs and
-                                                    demand, we're able to attain mutual understand again customer trust
-                                                    to offer appropriate advice
+                                                    Empowerment coaching focuses on personal and professional development. It helps employees build self-confidence, leadership skills, and resilience. This can lead to increased employee satisfaction, engagement, and overall performance, benefiting both individuals and the organization.
                                                 </div>
                                             </div>
                                         </div>
@@ -620,16 +616,14 @@
                                             <button class="accordion-button collapsed" type="button"
                                                 data-bs-toggle="collapse" data-bs-target="#collapse102"
                                                 aria-expanded="true" aria-controls="collapse102">
-                                                NDA Agreement will include?
+                                                What types of job seeker support do you offer?
                                             </button>
                                         </h2>
                                         <div id="collapse102" class="accordion-collapse collapse"
                                             aria-labelledby="heading102" data-bs-parent="#accordionExample100">
                                             <div class="accordion-body">
                                                 <div class="text color-999">
-                                                    Through the collaboration with customers in discussing needs and
-                                                    demand, we're able to attain mutual understand again customer trust
-                                                    to offer appropriate advice
+                                                    Our job seeker support services include resume building, interview preparation, job search strategies, and career counseling. We aim to empower job seekers to secure meaningful and satisfying employment.
                                                 </div>
                                             </div>
                                         </div>
@@ -639,16 +633,14 @@
                                             <button class="accordion-button collapsed" type="button"
                                                 data-bs-toggle="collapse" data-bs-target="#collapse103"
                                                 aria-expanded="true" aria-controls="collapse103">
-                                                Can my premium license be used for all devices?
+                                                Can you assist with executive recruiting as well?
                                             </button>
                                         </h2>
                                         <div id="collapse103" class="accordion-collapse collapse"
                                             aria-labelledby="heading103" data-bs-parent="#accordionExample100">
                                             <div class="accordion-body">
                                                 <div class="text color-999">
-                                                    Through the collaboration with customers in discussing needs and
-                                                    demand, we're able to attain mutual understand again customer trust
-                                                    to offer appropriate advice
+                                                    Yes, we have expertise in executive recruiting. Our team can help you identify and attract top-tier executive talent to drive your organization's success.
                                                 </div>
                                             </div>
                                         </div>
@@ -658,16 +650,14 @@
                                             <button class="accordion-button collapsed" type="button"
                                                 data-bs-toggle="collapse" data-bs-target="#collapse104"
                                                 aria-expanded="true" aria-controls="collapse104">
-                                                What things that we need provide when choose your service
+                                                How do you ensure the confidentiality of sensitive information during the recruiting process?
                                             </button>
                                         </h2>
                                         <div id="collapse104" class="accordion-collapse collapse"
                                             aria-labelledby="heading104" data-bs-parent="#accordionExample100">
                                             <div class="accordion-body">
                                                 <div class="text color-999">
-                                                    Through the collaboration with customers in discussing needs and
-                                                    demand, we're able to attain mutual understand again customer trust
-                                                    to offer appropriate advice
+                                                    We have strict confidentiality protocols in place to protect sensitive information. Our team is committed to maintaining the privacy and security of all parties involved in the hiring process.
                                                 </div>
                                             </div>
                                         </div>
@@ -677,23 +667,21 @@
                                             <button class="accordion-button collapsed" type="button"
                                                 data-bs-toggle="collapse" data-bs-target="#collapse105"
                                                 aria-expanded="true" aria-controls="collapse105">
-                                                How long for a standard project?
+                                                What sets your HR company apart from competitors?
                                             </button>
                                         </h2>
                                         <div id="collapse105" class="accordion-collapse collapse"
                                             aria-labelledby="heading105" data-bs-parent="#accordionExample100">
                                             <div class="accordion-body">
                                                 <div class="text color-999">
-                                                    Through the collaboration with customers in discussing needs and
-                                                    demand, we're able to attain mutual understand again customer trust
-                                                    to offer appropriate advice
+                                                    Our personalized approach, industry expertise, and commitment to the success of both employers and job seekers set us apart. We focus on long-term partnerships and results-driven strategies.
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <a href="#" class="text-uppercase text-white mt-30"> view all <i
-                                        class="ti-arrow-top-right ms-1"></i> </a>
+                                <!-- <a href="#" class="text-uppercase text-white mt-30"> view all <i
+                                        class="ti-arrow-top-right ms-1"></i> </a> -->
                             </div>
                         </div>
                     </div>
