--- a/public/the_median_time_for_start-ups.html
+++ b/public/the_median_time_for_start-ups.html
@@ -593,11 +593,11 @@
                                 </div> -->
                                 <p class="fw-bold text-uppercase fsz-16 mb-30"> our social </p>
                                 <div class="social-icons mb-60">
-                                    <a href="#"> <i class="lab la-twitter"></i> </a>
+                                    <a href="https://twitter.com/metanoiahr"> <i class="lab la-twitter"></i> </a>
                                     <!-- <a href="#"> <i class="lab la-facebook-f"></i> </a> -->
                                     <!-- <a href="#"> <i class="lab la-pinterest"></i> </a> -->
                                     <!-- <a href="#"> <i class="lab la-google"></i> </a> -->
-                                    <a href="#"> <i class="lab la-linkedin-in"></i> </a>
+                                    <a href="https://www.linkedin.com/in/abdullahhashemi/"> <i class="lab la-linkedin-in"></i> </a>
                                 </div>
 
                                 <p class="fw-bold text-uppercase fsz-16 mb-30"> popular posts </p>
@@ -699,15 +699,12 @@
 
                                 <p class="fw-bold text-uppercase fsz-16 mb-30"> popular tags </p>
                                 <div class="tags">
-                                    <a href="#"> WordPress </a>
-                                    <a href="#"> Consultation </a>
-                                    <a href="#"> Figma </a>
-                                    <a href="#"> Business </a>
-                                    <a href="#"> Market </a>
-                                    <a href="#"> Strategy </a>
-                                    <a href="#"> HTML </a>
-                                    <a href="#"> PSD </a>
-                                    <a href="#"> Experience </a>
+                                    <a href="#"> StartupTrends </a>
+                                    <a href="#"> InvestmentLandscape </a>
+                                    <a href="#"> EconomicUncertainty </a>
+                                    <a href="#"> VentureCapital </a>
+                                   
+                                   
                                 </div>
                             </div>
                         </div>
