--- a/public/page-blog-3.html
+++ b/public/page-blog-3.html
@@ -463,12 +463,12 @@
                         </div>
                         <p class="fw-bold text-uppercase fsz-16 mb-30"> our social </p>
                         <div class="social-icons mb-60">
-                            <a href="#"> <i class="lab la-twitter"></i> </a>
-                            <a href="#"> <i class="lab la-facebook-f"></i> </a>
-                            <a href="#"> <i class="lab la-pinterest"></i> </a>
-                            <a href="#"> <i class="lab la-google"></i> </a>
-                            <a href="#"> <i class="lab la-linkedin-in"></i> </a>
-                        </div>
+                                    <a href="https://twitter.com/metanoiahr"> <i class="lab la-twitter"></i> </a>
+                                    <!-- <a href="#"> <i class="lab la-facebook-f"></i> </a> -->
+                                    <!-- <a href="#"> <i class="lab la-pinterest"></i> </a> -->
+                                    <!-- <a href="#"> <i class="lab la-google"></i> </a> -->
+                                    <a href="https://www.linkedin.com/in/abdullahhashemi/"> <i class="lab la-linkedin-in"></i> </a>
+                         </div>
 
                         <p class="fw-bold text-uppercase fsz-16 mb-30"> popular posts </p>
                         <div class="pop-posts mb-60">
