--- a/public/page-single-post-3.html
+++ b/public/page-single-post-3.html
@@ -614,11 +614,11 @@
                                 </div>
                                 <p class="fw-bold text-uppercase fsz-16 mb-30"> our social </p>
                                 <div class="social-icons mb-60">
-                                    <a href="#"> <i class="lab la-twitter"></i> </a>
-                                    <a href="#"> <i class="lab la-facebook-f"></i> </a>
-                                    <a href="#"> <i class="lab la-pinterest"></i> </a>
-                                    <a href="#"> <i class="lab la-google"></i> </a>
-                                    <a href="#"> <i class="lab la-linkedin-in"></i> </a>
+                                    <a href="https://twitter.com/metanoiahr"> <i class="lab la-twitter"></i> </a>
+                                    <!-- <a href="#"> <i class="lab la-facebook-f"></i> </a> -->
+                                    <!-- <a href="#"> <i class="lab la-pinterest"></i> </a> -->
+                                    <!-- <a href="#"> <i class="lab la-google"></i> </a> -->
+                                    <a href="https://www.linkedin.com/in/abdullahhashemi/"> <i class="lab la-linkedin-in"></i> </a>
                                 </div>
 
                                 <p class="fw-bold text-uppercase fsz-16 mb-30"> popular posts </p>
