--- a/public/the_looming_recession.html
+++ b/public/the_looming_recession.html
@@ -600,11 +600,11 @@
                                 </div> -->
                                 <p class="fw-bold text-uppercase fsz-16 mb-30"> our social </p>
                                 <div class="social-icons mb-60">
-                                    <a href="#"> <i class="lab la-twitter"></i> </a>
+                                    <a href="https://twitter.com/metanoiahr"> <i class="lab la-twitter"></i> </a>
                                     <!-- <a href="#"> <i class="lab la-facebook-f"></i> </a> -->
                                     <!-- <a href="#"> <i class="lab la-pinterest"></i> </a> -->
                                     <!-- <a href="#"> <i class="lab la-google"></i> </a> -->
-                                    <a href="#"> <i class="lab la-linkedin-in"></i> </a>
+                                    <a href="https://www.linkedin.com/in/abdullahhashemi/"> <i class="lab la-linkedin-in"></i> </a>
                                 </div>
 
                                 <p class="fw-bold text-uppercase fsz-16 mb-30"> popular posts </p>
@@ -705,15 +705,15 @@
 
                                 <p class="fw-bold text-uppercase fsz-16 mb-30"> popular tags </p>
                                 <div class="tags">
-                                    <a href="#"> WordPress </a>
-                                    <a href="#"> Consultation </a>
-                                    <a href="#"> Figma </a>
-                                    <a href="#"> Business </a>
-                                    <a href="#"> Market </a>
-                                    <a href="#"> Strategy </a>
-                                    <a href="#"> HTML </a>
+                                    <a href="#"> StartupChallenges                                    </a>
+                                    <a href="#"> InvestmentTrends </a>
+                                    <a href="#"> TechIndustry </a>
+                                    <a href="#"> EconomicUncertainty </a>
+                                    <a href="#"> Entrepreneurship </a>
+                                    
+                                    <!-- <a href="#"> HTML </a>
                                     <a href="#"> PSD </a>
-                                    <a href="#"> Experience </a>
+                                    <a href="#"> Experience </a> -->
                                 </div>
                             </div>
                         </div>
