KM-1408 images added

--- a/public/index.html
+++ b/public/index.html
@@ -200,7 +200,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-8">
-                            <div class="info wow fadeInUp slow">
+                            <div class="info wow fadeInUp slow primary">
                                 <!-- <h5> <img src="assets/img/hr_footer.png" alt="" class="me-2"> MetanoiaHR
                                     Consult
                                     Firm</h5> -->
@@ -218,10 +218,10 @@
                                                 <i class="ti-arrow-top-right ms-1"></i></span>
                                         </a>
                                     </div>
-                                    <div class="button_su ms-3">
+                                    <div class="button_su ms-3 ">
                                         <span class="su_button_circle desplode-circle bg-cyan1"></span>
                                         <a href="./services.html"
-                                            class="butn border-1 brd-gray text-uppercase button_su_inner">
+                                            class="hero-btn border-1 brd-gray text-uppercase button_su_inner">
                                             <span class="button_text_container text-white fsz-16"> Our Services <i
                                                     class="ti-arrow-top-right ms-1"></i></span>
                                         </a>
@@ -311,8 +311,8 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="img wow zoomIn slow">
-                            <img src="assets/img/about/about3.jpeg" alt="" class="main-img">
-                            <img src="assets/img/about/line_star_shape1.png" alt="" class="shap-img">
+                            <!-- <img src="assets/img/about/mhr.png" alt="" class="shap-img"> -->
+                            <img src="assets/img/about/mhr.png" alt="" class="main-img">
                         </div>
                     </div>
                 </div>
