--- a/public/contact.html
+++ b/public/contact.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="keywords" content="HTML5 Template Iteck Multi-Purpose themeforest" />
-    <meta name="description" content="Iteck - Multi-Purpose HTML5 Template" />
+    <meta name="description" content="MetanoiaHR Contact Page" />
     <meta name="author" content="" />
 
     <!-- Title  -->
@@ -116,7 +116,7 @@
                             <a class="nav-link" href="page-blog-3.html">News</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="page-contact-3.html">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                     <div class="dropdown lang-btn">
@@ -125,7 +125,7 @@
                             <i class="ti-world me-2"></i> <span class="text-uppercase"> eng </span>
                         </button>
                         <ul class="dropdownMenu" aria-labelledby="dropdownMenuButton1">
-                            
+
                             <li><a class="dropdown-item" href="#"> French </a></li>
                         </ul>
                     </div>
